--- a/css/_contactform.scss
+++ b/css/_contactform.scss
@@ -11,7 +11,7 @@
     // padding-left: 25%;
   }
 }
-.contact-form {
+#contact-form {
   height: 50vh;
   background: $primary-color;
   display: flex;
