--- a/css/_projectview.scss
+++ b/css/_projectview.scss
@@ -89,3 +89,14 @@ section {
     }
   }
 }
+.project-logo {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    height: 100%;
+    width: 100%;
+  }
+}
