--- a/css/index.scss
+++ b/css/index.scss
@@ -36,6 +36,9 @@ nav {
       font-family: $font-style;
       font-weight: 400;
       padding-top: 1.3rem;
+      a {
+        text-decoration: none;
+      }
       font-size: 1.2rem;
       li:nth-child(1),
       li:nth-child(2) {
@@ -150,3 +153,10 @@ main {
     }
   }
 }
+// #logo {
+//   background: url(../assets/newlogo.png);
+//   background-size: contain;
+//   width: 200px;
+//   height: 100%;
+//   z-index: 100;
+// }
