--- a/css/index.scss
+++ b/css/index.scss
@@ -1,162 +1,196 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-@import "./projectview";
-@import "./contactform";
-@import "./colors";
+$primary-color: #f9a726;
+$secondary-color: #956416;
+$font-family: 'Ubuntu Mono', monospace;
+@mixin CenterAlign($flex-direction, $align-items, $justify-content){
+	display: flex;
+	flex-direction: $flex-direction;
+	align-items: $align-items;
+	justify-content: $justify-content;
+}
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*, *::after, *::before{
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
+	font-family:$font-family;
 }
-#logo {
-  height: 30px;
-  // width: 150px;
-  padding: 1.3rem 3rem;
-}
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  left: 0px;
-  z-index: 100;
 
-  .nav-tabs {
-    width: 50vw;
-    ul {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      width: 100%;
-      list-style: none;
-      font-family: $font-style;
-      font-weight: 400;
-      padding-top: 1.3rem;
-      a {
-        text-decoration: none;
-      }
-      font-size: 1.2rem;
-      li:nth-child(1),
-      li:nth-child(2) {
-        color: $primary-color;
-      }
-      li {
-        cursor: pointer;
-        button {
-          color: white;
-          font-size: 1.2rem;
-          background: radial-gradient(
-            198.65% 273.43% at 75.58% 198.65%,
-            #cc4962 0%,
-            #6d578e 100%
-          );
-          padding: 5px 10px;
-          outline-style: none;
-          border: none;
-          transition: all 0.2s;
-          border-radius: 999px;
-          cursor: pointer;
-          &:hover {
-            background: radial-gradient(
-              198.65% 273.43% at 75.58% 198.65%,
-              #cc4962 0%,
-              #cc4962 100%
-            );
-          }
-        }
-      }
-    }
-  }
+header{
+	background: $primary-color;
+	height: 7vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	z-index: 11;
+	#logo{
+		padding-right:1.5rem;
+	}
+	.hamburger-menu{
+		height: 5vh;
+		width : 6vh;
+		margin-left: 0.5rem;
+		cursor: pointer;
+		position: relative;
+		@include CenterAlign(column, center, space-around);
+		.nav_options{
+			transition: 0.3s;
+			position: absolute;
+			bottom:0px;
+			left: 0px;
+			opacity: 0.9;
+			width: 130px;
+			height: 150px;
+			z-index:10;
+			@include CenterAlign(column, flex-start, space-around);
+			transform:translateY(-7.1vh) translateY(0%);
+			background: $secondary-color;
+			span{
+				display:block;
+				font-size:1.3rem;
+				padding: 3px;
+				width: 100%;
+				border-radius: 999px;
+				&:hover{
+					background: #72351c;
+				}
+				a{
+					text-decoration: none;
+					color:#fff;
+				}
+			}
+		}
+		div:first-child{
+			height:20%; 
+			width: 100%;
+			background: $secondary-color;
+			margin:0px;
+			padding:0px
+		}
+		&::before{
+			height: 20%;
+			content:"";
+			width: 100%;
+			background: $secondary-color;
+		}
+		&::after{
+			height: 20%;
+			width: 100%;
+			content:"";
+			background: $secondary-color;
+		}
+	}
 }
-main {
-  display: flex;
-  #left,
-  #right {
-    width: 50vw;
-    height: 100vh;
-  }
+main{
+	background: $primary-color;
+	position:relative;
+	height: 100vh;
+	.intro{
+		height:93vh;
+		padding: 2rem 0rem 0rem 0.7rem;
+		span:first-child{
+			font-size: 1.5rem;
+		}
+		span{
+			display: block;
+			color: #fff;
+			padding: 0.3rem;
+			&:nth-child(2), &:nth-child(3){
+				font-size: 3.5rem;
+			}
+		}
+	}
+	.mobile_svg{
+		width: 100%;
+		height:auto;
+		position: absolute;
+		bottom: 0px;
+		left: 0px;
+		right: 0px;
+		z-index: 3;
+	}
+	.web_svg{
+		display:none;
+		position: absolute;
+	}
+	#white_div{
+		position:absolute;
+		bottom: 0px;
+		top: 90%;
+		left:0px;
+		right: 0px;
+		z-index:2;
+		background: #fff;
+	}
 }
-#left {
-  background: $primary-color;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: center;
-  #line1,
-  #name {
-    z-index: 10;
-    color: white;
-    font-family: $font-style;
-    font-weight: 400;
-    padding-left: 20%;
-    padding-top: 25px;
-  }
-  .blob {
-    position: absolute;
-    transform: scale(1.5);
-    left: -53%;
-    right: -10%;
-    top: -5%;
-    bottom: 0;
-    filter: blur(1200px);
-    opacity: 0.5;
-  }
+.projects{
+	width:100%;
+	margin-top: 10px;
+	height: 480px;
+	@include CenterAlign(column, center, space-evenly);
+	div:nth-child(1){
+		&::before{
+			background-image: url("../assets/Bank.jpg");
+		}
+	}
+	&>div{
+		width: 50%;
+		height: 100px;
+		position: relative;
+		padding-left: 3px;
+		overflow: hidden;
+		@include CenterAlign(row, center, space-between);
+		background: #000;
+		&::before{
+			content:"";
+			position: absolute;
+			top:0px;
+			bottom: 0px;
+			left: 0px;
+			right: 0px;
+			background-size: cover;
+			opacity: 0.3;
+		}
+		&>a{
+			text-decoration: none;
+			color: #fff;
+			position: relative;
+			height: 24px;
+		}
+	}
 }
-#line1 {
-  font-size: 3.5rem;
-}
-#name {
-  font-size: 4.2rem;
-  span {
-    padding-top: 25px;
-    display: block;
-  }
-}
-#right {
-  position: relative;
-  img {
-    width: 50vw;
-    height: 70vh;
-    position: absolute;
-    bottom: 0%;
-    left: -10%;
-  }
-}
-.link {
-  position: relative;
-  padding: 7px;
-  &::before {
-    content: "";
-    background: radial-gradient(
-      198.65% 273.43% at 75.58% 198.65%,
-      #cc4962 0%,
-      #cc4962 100%
-    );
 
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    bottom: 0px;
-    top: 93%;
-    transition: all 0.3s;
-  }
-  &:hover {
-    &::before {
-      left: 0%;
-      right: 0%;
-    }
-  }
+.contact-page{
+	background: $primary-color;
+	@include CenterAlign(column, center, space-around);
+	&>span{
+		padding: 1.2rem 0;
+		font-size: 1.5rem;
+		width: 100%;
+		@include CenterAlign(row, center, space-evenly);
+	}
+	.form_data{
+		@include CenterAlign(column, center, space-around);
+		width: 100%;
+		padding-bottom: 0.3rem;
+		input{
+			width:70%;
+			margin-bottom: 0.7rem;
+			outline-style: none;
+			color:$secondary-color;
+			border-radius: 999px;
+			border:none;
+			padding: 0.4rem 0 0.4rem 0.3rem;
+		}
+		#submit_butt{
+			outline-style: none;
+			border-radius: 999px;
+			padding: 0.3rem 1rem;
+			border:none;
+			color: $secondary-color;
+			&:hover{
+				background: #72351c;
+				color: #fff;
+			}
+		}
+	}
 }
-// #logo {
-//   background: url(../assets/newlogo.png);
-//   background-size: contain;
-//   width: 200px;
-//   height: 100%;
-//   z-index: 100;
-// }
