--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,15 @@
 .projects > div:nth-child(1)::before {
   background-image: url("../assets/Bank.jpg");
 }
+.projects > div:nth-child(2)::before {
+  background-image: url("../assets/react-min.png");
+}
+.projects > div:nth-child(3)::before {
+  background-image: url("../assets/anroid.png");
+}
+.projects > div:nth-child(4)::before {
+  background-image: url("../assets/mech_instrument.jpg");
+}
 .projects > div::before {
   content: "";
   position: absolute;
